# book-translator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sample.ru.epub
.github/workflows/: ci.yml
.learnings/: openrouter-null-content-200ok.md
.opencode/memory/: 2026-06-02.md  2026-06-04.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1-MILESTONE-AUDIT.md  v2-MILESTONE-AUDIT.md  v4-MILESTONE-AUDIT.md
.planning/debug/: ci-help-source-lang-missing.md  translation-failed-messages.md
.planning/milestones/: v3-MILESTONE-AUDIT.md  v3-REQUIREMENTS.md  v3-ROADMAP.md
.planning/milestones/v1/: v1-CLOSURE.md
.planning/milestones/v2/: v2-CLOSURE.md  v2-MILESTONE-AUDIT.md  v2-REQUIREMENTS.md  v2-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-parsers/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-DISCUSSION-LOG.md  02-VALIDATION.md
.planning/phases/03-translation-engine/: 03-01-PLAN.md  03-02-PLAN.md  03-03-SUMMARY.md  03-AI-SPEC.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-epub-assembler/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-cli/: 05-01-PLAN.md  05-04-PLAN.md  05-DISCUSSION-LOG.md  05-VERIFICATION.md
.planning/phases/06-polish/: 06-02-PLAN.md  06-03-PLAN.md  06-04-PLAN.md  06-VERIFICATION.md
.planning/phases/07-mode-selection-cli-dispatch/: 07-02-PLAN.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md
.planning/phases/08-per-sentence-mode/: 08-CONTEXT.md
.planning/phases/09-monolingual-mode/: 09-01-PLAN.md  09-01-SUMMARY.md
.planning/phases/10-backwards-compatibility-verification/: PLAN.md
.planning/phases/10.1-fix-sent-06-align-sentence-rendering-with-chunk-based-transl/: 10.1-CONTEXT.md
.planning/phases/10.2-fix-mono-02-mono-04-output-extension-and-heading-order/: 10.2-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
memory/: 2026-06-01.md  2026-06-03.md  2026-06-04.md
src/book_translator/: cli.py
src/book_translator/models/: job.py  (+1 more)
tests/: conftest.py  test_assembler.py  test_assembler_integration.py  test_builder.py  test_cli.py  test_ephemeral.py  test_job_store.py  test_models.py  test_parsers.py  test_translator.py
(+107 files in other folders)
