[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-translator"
version = "0.1.0"
description = "AI-powered bilingual book translator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdown>=3.4",
    "openai>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.scripts]
book-translator = "book_translator.cli:app"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/book_translator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
