[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-translator"
version = "0.1.0"
description = "AI-powered bilingual book translator. Converts EPUB, TXT, and Markdown into parallel-reading EPUBs."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "book-translator contributors" }]
keywords = ["epub", "translation", "openai", "bilingual", "ebook", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdown>=3.4",
    "openai>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.urls]
Homepage = "https://github.com/aefimov/book-translator"
Repository = "https://github.com/aefimov/book-translator"
Issues = "https://github.com/aefimov/book-translator/issues"

[project.scripts]
book-translator = "book_translator.cli:app"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/book_translator"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
